--- a/css/styles.css
+++ b/css/styles.css
@@ -40,10 +40,6 @@ a {
   letter-spacing: 0.03em;
 }
 
-.list {
-  list-style: none;
-}
-
 .header-link {
   font-weight: 500;
   font-size: 16px;
@@ -52,16 +48,21 @@ a {
   color: #2e2f42;
 }
 
+.header-link:hover,
+.header-link:focus {
+  color: #404bbf;
+}
+
 .link {
   text-decoration: none;
 }
 
-.link-studio:hover {
-  color: #404bbf;
-}
-
 .address {
   font-style: normal;
+}
+
+.list {
+  list-style: none;
 }
 
 .mail-link {
@@ -69,12 +70,11 @@ a {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  font-size: 16px;
 }
 
-.mail-link :focus {
-  color: #404bbf;
-}
-.mail-link:hover {
+.mail-link:hover,
+.mail-link:focus {
   color: #404bbf;
 }
 
@@ -83,10 +83,11 @@ a {
   font-style: normal;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  font-size: 16px;
 }
 
-.tel-link:focus,
-.tel-link:hover {
+.tel-link:hover,
+.tel-link:focus {
   color: #404bbf;
 }
 
