--- a/css/styles.css
+++ b/css/styles.css
@@ -101,24 +101,23 @@ a {
   font-weight: 700;
   text-align: center;
   line-height: 1.07;
-  margin-left: 472px;
+  letter-spacing: 0.02em;
 }
 
 .order-btn {
   background-color: #4d5ae5;
+  font-family: "Roboto", sans-serif;
   color: #ffffff;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
   text-align: center;
-  text-shadow: none;
-  margin-left: 636px;
-  margin-top: 48px;
-  margin-bottom: 188px;
+  letter-spacing: 0.04em;
   cursor: pointer;
 }
 
-.order-btn:hover {
+.order-btn:hover,
+.order-btn:focus {
   background-color: #404bbf;
 }
 
