--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ a {
   list-style: none;
 }
 
-.mail-link {
+.address-link {
   color: #434455;
   font-style: normal;
   line-height: 1.5;
@@ -73,21 +73,8 @@ a {
   font-size: 16px;
 }
 
-.mail-link:hover,
-.mail-link:focus {
-  color: #404bbf;
-}
-
-.tel-link {
-  color: #434455;
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  font-size: 16px;
-}
-
-.tel-link:hover,
-.tel-link:focus {
+.address-link:hover,
+.address-link:focus {
   color: #404bbf;
 }
 
@@ -126,12 +113,14 @@ a {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  letter-spacing: 0.02em;
 }
 
 .features-title-text {
   color: #434455;
   font-size: 16px;
   line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 h2 {
