--- a/css/styles.css
+++ b/css/styles.css
@@ -191,8 +191,8 @@ a {
 
 .filter-btn {
   font-family: "Roboto", sans-serif;
-  background-color: #4d5ae5;
-  color: #f4f4fd;
+  color: #4d5ae5;
+  background-color: #f4f4fd;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
